hphp/test/zend/good/tests/classes/__call_002.php.expectf

Fatal error: Method Test::__call() must take exactly 2 arguments in %s/__call_002.php on line 4
